<resources>
    <string name="app_name">Учет коммунальных услуг</string>
    <string name="title_graf">Графики</string>
    <string name="title_table">Таблица</string>
    <string name="title_settings">Настройки</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="email">Введите e-mail</string>
    <string name="enter_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="period">Период </string>
    <string name="gas"> Газ, м3 </string>
    <string name="gas_per_one"> Газ, руб. / м3 </string>
    <string name="gas_price"> Стоимость газа, руб. </string>
    <string name="cold_water"> Холодная вода, м³ </string>
    <string name="out_water"> Водоотвод, м³ </string>
    <string name="cold_water_per_one"> Холодная вода, руб. / м³ </string>
    <string name="out_water_per_one"> Водоотвод, руб. / м³ </string>
    <string name="water_price"> Стоимость воды, руб. </string>
    <string name="electricity1"> Электричество, тариф 1, кватт/ч </string>
    <string name="electricity2"> Электричество, тариф 2, кватт/ч </string>
    <string name="electricity3"> Электричество, тариф 3, кватт/ч </string>
    <string name="electricity1_per_one"> Электричество, тариф 1, руб. / кватт/ч </string>
    <string name="electricity2_per_one"> Электричество, тариф 2, руб. / кватт/ч </string>
    <string name="electricity3_per_one"> Электричество, тариф 3, руб. / кватт/ч </string>
    <string name="electricity_price"> Стоимость электричества, руб.</string>
    <string name="main_table"> Таблица коммунальных услуг </string>
    <string name="settings_table">settings_table</string>
    <string name="add_row_button"> + </string>
    <string name="will_be_settings"> Здесь будут настройки </string>
    <string name="will_be_graphics">Здесь будут графики</string>
    <string name="save">Сохранить</string>
    <string name="gas_gr">Газ</string>
    <string name="water_gr">Вода</string>
    <string name="electricity_gr">Электричество</string>
    <string name="hint">ДД-ММ-ГГ</string>
    <string name="settings_period_hint">Введите в поле «Период» начало периода, \nв течение которого актуальна указанная цена за единицу. \nКонец периода - это начало следующего в следующей строке.</string>
    <string name="period_hint">Введите в поле «Период» начало периода, \nза который были потрачены ресурсы. \nКонец периода - это начало следующего в следующей строке.</string>
</resources>