<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.table.TableFragment">

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="3dip"
        android:text="@string/main_table"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings_add_row_button"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:text="@string/add_row_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/save"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/settings_add_row_button"
        app:layout_constraintStart_toEndOf="@+id/textSettings"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-205dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableLayout
                        android:id="@+id/main_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#A19FF1">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/settings_period"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dip"
                                android:text="@string/period"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/gas"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dip"
                                android:text="@string/gas"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/gas_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dip"
                                android:text="@string/gas_price"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/cold_water"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dip"
                                android:text="@string/cold_water"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/gas_per_one"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dip"
                                android:text="@string/out_water"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/cold_water_per_one"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dip"
                                android:text="@string/water_price"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/out_water_per_one"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dip"
                                android:text="@string/electricity1"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/electricity1_per_one"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dip"
                                android:text="@string/electricity2"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/electricity2_per_one"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dip"
                                android:text="@string/electricity3"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/electricity_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="3dip"
                                android:text="@string/electricity_price"
                                android:textColor="@color/black" />
                        </TableRow>

                    </TableLayout>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/period_hint" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>