<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/add_row_button"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/gas_gr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="20dp"
                android:text="@string/gas_gr"
                android:textColor="#000000"
                android:textSize="36sp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph_gas"
                android:layout_width="match_parent"
                android:layout_height="200dip" />

            <TextView
                android:id="@+id/water_gr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="20dp"
                android:text="@string/water_gr"
                android:textColor="#000000"
                android:textSize="36sp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph_water"
                android:layout_width="match_parent"
                android:layout_height="200dip" />

            <TextView
                android:id="@+id/electricity_gr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="20dp"
                android:text="@string/electricity_gr"
                android:textColor="#000000"
                android:textSize="36sp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph_electricity"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_marginBottom="60dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>